[package]
name = "rustLoadX"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
color-eyre = "0.6.5"
config = "0.15.19"
crossterm = "0.29.0"
dotenv = "0.15.0"
ratatui = "0.30.0"
rdkafka = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full", "time"] }

